--- a/index.about.html
+++ b/index.about.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <head> 
-<title>Indian Cusine</title>
+<title>About US!</title>
 </head>
 
 
@@ -24,5 +24,16 @@
             
             Come in to Indian Cuisine today to experience the difference for yourself, or feel free to use our online ordering system to order your take out ahead of time so you can simply pick it up on your way home.</h3>
     </article>
+    <article><h2>Now the eatery has been accredited as a restaurant that is the best when it comes to Vegan Delivery & Takeout on the Upper West side of New York. Speaking of North Indian dishes, none of the other eateries can match our expertise and excellence when it comes to serving the tastiest North Indian morsel for you.
+
+        However, that doesn't mean that the eatery provides only vegetarian dishes. It provides all sorts of tasty non-vegetarian dishes that include lamb, chicken, shrimp, and other types of seafood as well.</h2></article>
 </body>
+<style>
+    body {
+      background-image: url('indian.jpg');
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: cover;
+    }
+    </style>
 </head>
