--- a/index.contactus.html
+++ b/index.contactus.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <head> 
-<title>Indian Cusine</title>
+<title>Contact Us!</title>
 </head>
 
 
@@ -28,4 +28,12 @@
         We'll get back to you when our grade is convient ! Call us at Phone: (212)944-0182. Or leave a email at ADELACRUZ@CITYTECH.CUNY.EDU or onlineclass2020@outlook.com 
 
 </body>
+<style>
+    body {
+      background-image: url('indian.jpg');
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: cover;
+    }
+    </style>
 </head>
