--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!doctype html>
 <head> 
-<title>Indian Cusine</title>
+<title>Silver Spoon</title>
+<style>
+    h1{text-align: center;}
+</style>
+<link rel="stylesheet" href="stylesheet.css">
 </head>
 
 
 <body> 
-    <header><h1>Freshly grown and healthy to eat! Safe for the envirovment and grown locally</h1> </header>
+    <header><h1>Silver Spoon</h1> </header>
+    <h2>Freshly grown and healthy to eat! Safe for the envirovment and grown locally</h2>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -15,7 +20,7 @@
         </ul>
     </nav>
     <section>
-        <p></p>
+        <p>wfbabwfaw;fawlkfnalwfnanfalwnflawnflanflanfalwnflanwflanflanfl</p>
 
 
     </section>
@@ -31,7 +36,14 @@
         Tuesday	4:30PM–12AM
          </h5></p>
 </footer>
-    
+<style>
+    body {
+      background-image: url('indian.jpg');
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: cover;
+    }
+    </style>
 </body>
 </head>
 
